Fixed cursor and overflow

--- a/Client/style.css
+++ b/Client/style.css
@@ -16,9 +16,12 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.*/
 
 body, html {
-	margin:0 auto 0 auto;
-	height:100%;
+	margin:0 auto;
 	width:100%;
+	height:100%;
+	min-width: 800px;
+	min-height: 600px;
+	overflow: auto;
 	color: #000000;
 	background-color: #2a2a2a;
 }
@@ -205,10 +208,10 @@ div#cursor {
 	position: absolute;
 	z-index: 2;
 	width: 2px;
-	top: 30%;
+	top: 163px;
 	left: 50%;
 	background-color: #996600;
-	height: 80%;
+	height: calc(100% - 165px);
 }
 
 img {
